src/gen/ClangParser.py
# Generated from C:/Users/Sergey/PycharmProjects/c-syntax-analyzer/src\Clang.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class ClangParser(Parser):
    grammarFileName = "Clang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'auto'", "'break'", "'case'", "'char'",
                    "'const'", "'continue'", "'default'", "'do'", "'double'",
                    "'else'", "'enum'", "'float'", "'for'", "'goto'", "'if'",
                    "'inline'", "'int'", "'long'", "'restrict'", "'return'",
                    "'short'", "'signed'", "'sizeof'", "'static'", "'struct'",
                    "'switch'", "'typedef'", "'union'", "'unsigned'", "'void'",
                    "'volatile'", "'while'", "'('", "')'", "'['", "']'",
                    "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'",
                    "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'",
                    "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'",
                    "'~'", "'?'", "':'", "';'", "','", "'='", "'*='", "'/='",
                    "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='",
                    "'|='", "'=='", "'!='", "'->'", "'.'", "'...'"]

    symbolicNames = ["<INVALID>", "Auto", "Break", "Case", "Char", "Const",
                     "Continue", "Default", "Do", "Double", "Else", "Enum",
                     "Float", "For", "Goto", "If", "Inline", "Int", "Long",
                     "Restrict", "Return", "Short", "Signed", "Sizeof",
                     "Static", "Struct", "Switch", "Typedef", "Union",
                     "Unsigned", "Void", "Volatile", "While", "LeftParen",
                     "RightParen", "LeftBracket", "RightBracket", "LeftBrace",
                     "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual",
                     "LeftShift", "RightShift", "Plus", "Increment", "Minus",
                     "Descrement", "Star", "Div", "Mod", "And", "Or", "LogicalAnd",
                     "LogicalOr", "Caret", "Not", "Tilde", "Question",
                     "Colon", "Semi", "Comma", "Assign", "StarAssign",
                     "DivAssign", "ModAssign", "PlusAssign", "MinusAssign",
                     "LeftShiftAssign", "RightShiftAssign", "AndAssign",
                     "XorAssign", "OrAssign", "Equal", "NotEqual", "Arrow",
                     "Dot", "Ellipsis", "Identifier", "Constant", "DigitSequence",
                     "StringLiteral", "ComplexDefine", "AsmBlock", "LineAfterPreprocessing",
                     "LineDirective", "PreprocessiorBlock", "PragmaDirective",
                     "Whitespace", "Newline", "BlockComment", "LineComment"]

    RULE_primaryExpression = 0
    RULE_postfixExpression = 1
    RULE_argumentExpressionList = 2
    RULE_unaryExpression = 3
    RULE_unaryOperator = 4
    RULE_castExpression = 5
    RULE_multiplicativeExpression = 6
    RULE_additiveExpression = 7
    RULE_shiftExpression = 8
    RULE_relationalExpression = 9
    RULE_equalityExpression = 10
    RULE_andExpression = 11
    RULE_exclusiveOrExpression = 12
    RULE_inclusiveOrExpression = 13
    RULE_logicalAndExpression = 14
    RULE_logicalOrExpression = 15
    RULE_conditionalExpression = 16
    RULE_assignmentExpression = 17
    RULE_assignmentOperator = 18
    RULE_expression = 19
    RULE_constantExpression = 20
    RULE_declaration = 21
    RULE_declarationSpecifiers = 22
    RULE_declarationSpecifier = 23
    RULE_initDeclaratorList = 24
    RULE_initDeclarator = 25
    RULE_storageClassSpecifier = 26
    RULE_typeSpecifier = 27
    RULE_structOrUnionSpecifier = 28
    RULE_structOrUnion = 29
    RULE_structDeclarationList = 30
    RULE_structDeclaration = 31
    RULE_specifierQualifierList = 32
    RULE_structDeclaratorList = 33
    RULE_structDeclarator = 34
    RULE_typeQualifier = 35
    RULE_functionSpecifier = 36
    RULE_declarator = 37
    RULE_directDeclarator = 38
    RULE_nestedParenthesesBlock = 39
    RULE_pointer = 40
    RULE_typeQualifierList = 41
    RULE_parameterTypeList = 42
    RULE_parameterList = 43
    RULE_parameterDeclaration = 44
    RULE_identifierList = 45
    RULE_typeName = 46
    RULE_typedefName = 47
    RULE_initializer = 48
    RULE_initializerList = 49
    RULE_designation = 50
    RULE_designatorList = 51
    RULE_designator = 52
    RULE_statement = 53
    RULE_labeledStatement = 54
    RULE_compoundStatement = 55
    RULE_blockItemList = 56
    RULE_blockItem = 57
    RULE_expressionStatement = 58
    RULE_selectionStatement = 59
    RULE_iterationStatement = 60
    RULE_forCondition = 61
    RULE_forDeclaration = 62
    RULE_forExpression = 63
    RULE_jumpStatement = 64
    RULE_compilationUnit = 65
    RULE_externalDeclaration = 66
    RULE_functionDefinition = 67
    RULE_declarationList = 68

    ruleNames = ["primaryExpression", "postfixExpression", "argumentExpressionList",
                 "unaryExpression", "unaryOperator", "castExpression",
                 "multiplicativeExpression", "additiveExpression", "shiftExpression",
                 "relationalExpression", "equalityExpression", "andExpression",
                 "exclusiveOrExpression", "inclusiveOrExpression", "logicalAndExpression",
                 "logicalOrExpression", "conditionalExpression", "assignmentExpression",
                 "assignmentOperator", "expression", "constantExpression",
                 "declaration", "declarationSpecifiers", "declarationSpecifier",
                 "initDeclaratorList", "initDeclarator", "storageClassSpecifier",
                 "typeSpecifier", "structOrUnionSpecifier", "structOrUnion",
                 "structDeclarationList", "structDeclaration", "specifierQualifierList",
                 "structDeclaratorList", "structDeclarator", "typeQualifier",
                 "functionSpecifier", "declarator", "directDeclarator",
                 "nestedParenthesesBlock", "pointer", "typeQualifierList",
                 "parameterTypeList", "parameterList", "parameterDeclaration",
                 "identifierList", "typeName", "typedefName", "initializer",
                 "initializerList", "designation", "designatorList", "designator",
                 "statement", "labeledStatement", "compoundStatement",
                 "blockItemList", "blockItem", "expressionStatement",
                 "selectionStatement", "iterationStatement", "forCondition",
                 "forDeclaration", "forExpression", "jumpStatement", "compilationUnit",
                 "externalDeclaration", "functionDefinition", "declarationList"]

    EOF = Token.EOF
    Auto = 1
    Break = 2
    Case = 3
    Char = 4
    Const = 5
    Continue = 6
    Default = 7
    Do = 8
    Double = 9
    Else = 10
    Enum = 11
    Float = 12
    For = 13
    Goto = 14
    If = 15
    Inline = 16
    Int = 17
    Long = 18
    Restrict = 19
    Return = 20
    Short = 21
    Signed = 22
    Sizeof = 23
    Static = 24
    Struct = 25
    Switch = 26
    Typedef = 27
    Union = 28
    Unsigned = 29
    Void = 30
    Volatile = 31
    While = 32
    LeftParen = 33
    RightParen = 34
    LeftBracket = 35
    RightBracket = 36
    LeftBrace = 37
    RightBrace = 38
    Less = 39
    LessEqual = 40
    Greater = 41
    GreaterEqual = 42
    LeftShift = 43
    RightShift = 44
    Plus = 45
    Increment = 46
    Minus = 47
    Descrement = 48
    Star = 49
    Div = 50
    Mod = 51
    And = 52
    Or = 53
    LogicalAnd = 54
    LogicalOr = 55
    Caret = 56
    Not = 57
    Tilde = 58
    Question = 59
    Colon = 60
    Semi = 61
    Comma = 62
    Assign = 63
    StarAssign = 64
    DivAssign = 65
    ModAssign = 66
    PlusAssign = 67
    MinusAssign = 68
    LeftShiftAssign = 69
    RightShiftAssign = 70
    AndAssign = 71
    XorAssign = 72
    OrAssign = 73
    Equal = 74
    NotEqual = 75
    Arrow = 76
    Dot = 77
    Ellipsis = 78
    Identifier = 79
    Constant = 80
    DigitSequence = 81
    StringLiteral = 82
    ComplexDefine = 83
    AsmBlock = 84
    LineAfterPreprocessing = 85
    LineDirective = 86
    PreprocessiorBlock = 87
    PragmaDirective = 88
    Whitespace = 89
    Newline = 90
    BlockComment = 91
    LineComment = 92

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(ClangParser.Identifier, 0)

        def Constant(self):
            return self.getToken(ClangParser.Constant, 0)

        def StringLiteral(self, i: int = None):
            if i is None:
                return self.getTokens(ClangParser.StringLiteral)
            else:
                return self.getToken(ClangParser.StringLiteral, i)

        def LeftParen(self):
            return self.getToken(ClangParser.LeftParen, 0)

        def expression(self):
            return self.getTypedRuleContext(ClangParser.ExpressionContext, 0)

        def RightParen(self):
            return self.getToken(ClangParser.RightParen, 0)

        def getRuleIndex(self):
            return ClangParser.RULE_primaryExpression

    def primaryExpression(self):

        localctx = ClangParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primaryExpression)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ClangParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(ClangParser.Identifier)
                pass
            elif token in [ClangParser.Constant]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(ClangParser.Constant)
                pass
            elif token in [ClangParser.StringLiteral]:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self._errHandler.sync(self)
                _alt = 1
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 140
                        self.match(ClangParser.StringLiteral)

                    else:
                        raise NoViableAltException(self)
                    self.state = 143
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

                pass
            elif token in [ClangParser.LeftParen]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.match(ClangParser.LeftParen)
                self.state = 146
                self.expression(0)
                self.state = 147
                self.match(ClangParser.RightParen)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostfixExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(ClangParser.PrimaryExpressionContext, 0)

        def LeftParen(self):
            return self.getToken(ClangParser.LeftParen, 0)

        def typeName(self):
            return self.getTypedRuleContext(ClangParser.TypeNameContext, 0)

        def RightParen(self):
            return self.getToken(ClangParser.RightParen, 0)

        def LeftBrace(self):
            return self.getToken(ClangParser.LeftBrace, 0)

        def initializerList(self):
            return self.getTypedRuleContext(ClangParser.InitializerListContext, 0)

        def RightBrace(self):
            return self.getToken(ClangParser.RightBrace, 0)

        def Comma(self):
            return self.getToken(ClangParser.Comma, 0)

        def postfixExpression(self):
            return self.getTypedRuleContext(ClangParser.PostfixExpressionContext, 0)

        def LeftBracket(self):
            return self.getToken(ClangParser.LeftBracket, 0)

        def expression(self):
            return self.getTypedRuleContext(ClangParser.ExpressionContext, 0)

        def RightBracket(self):
            return self.getToken(ClangParser.RightBracket, 0)

        def argumentExpressionList(self):
            return self.getTypedRuleContext(ClangParser.ArgumentExpressionListContext, 0)

        def Identifier(self):
            return self.getToken(ClangParser.Identifier, 0)

        def Dot(self):
            return self.getToken(ClangParser.Dot, 0)

        def Arrow(self):
            return self.getToken(ClangParser.Arrow, 0)

        def Increment(self):
            return self.getToken(ClangParser.Increment, 0)

        def Descrement(self):
            return self.getToken(ClangParser.Descrement, 0)

        def getRuleIndex(self):
            return ClangParser.RULE_postfixExpression

    def postfixExpression(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ClangParser.PostfixExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_postfixExpression, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.state = 152
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.state = 153
                self.match(ClangParser.LeftParen)
                self.state = 154
                self.typeName()
                self.state = 155
                self.match(ClangParser.RightParen)
                self.state = 156
                self.match(ClangParser.LeftBrace)
                self.state = 157
                self.initializerList(0)
                self.state = 158
                self.match(ClangParser.RightBrace)
                pass

            elif la_ == 3:
                self.state = 160
                self.match(ClangParser.LeftParen)
                self.state = 161
                self.typeName()
                self.state = 162
                self.match(ClangParser.RightParen)
                self.state = 163
                self.match(ClangParser.LeftBrace)
                self.state = 164
                self.initializerList(0)
                self.state = 165
                self.match(ClangParser.Comma)
                self.state = 166
                self.match(ClangParser.RightBrace)
                pass

            self._ctx.stop = self._input.LT(-1)
            self.state = 188
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 186
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
                    if la_ == 1:
                        localctx = ClangParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 170
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 171
                        self.match(ClangParser.LeftBracket)
                        self.state = 172
                        self.expression(0)
                        self.state = 173
                        self.match(ClangParser.RightBracket)
                        pass

                    elif la_ == 2:
                        localctx = ClangParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 175
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 176
                        self.match(ClangParser.LeftParen)
                        self.state = 178
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if ((((_la - 23)) & ~0x3f) == 0 and ((1 << (_la - 23)) & (
                                (1 << (ClangParser.Sizeof - 23)) | (1 << (ClangParser.LeftParen - 23)) | (
                                1 << (ClangParser.Plus - 23)) | (1 << (ClangParser.Increment - 23)) | (
                                        1 << (ClangParser.Minus - 23)) | (1 << (ClangParser.Descrement - 23)) | (
                                        1 << (ClangParser.Star - 23)) | (1 << (ClangParser.And - 23)) | (
                                        1 << (ClangParser.Not - 23)) | (1 << (ClangParser.Tilde - 23)) | (
                                        1 << (ClangParser.Identifier - 23)) | (1 << (ClangParser.Constant - 23)) | (
                                        1 << (ClangParser.DigitSequence - 23)) | (
                                        1 << (ClangParser.StringLiteral - 23)))) != 0):
                            self.state = 177
                            self.argumentExpressionList(0)

                        self.state = 180
                        self.match(ClangParser.RightParen)
                        pass

                    elif la_ == 3:
                        localctx = ClangParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 181
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 182
                        _la = self._input.LA(1)
                        if not (_la == ClangParser.Arrow or _la == ClangParser.Dot):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 183
                        self.match(ClangParser.Identifier)
                        pass

                    elif la_ == 4:
                        localctx = ClangParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 184
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 185
                        _la = self._input.LA(1)
                        if not (_la == ClangParser.Increment or _la == ClangParser.Descrement):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        pass

                self.state = 190
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ArgumentExpressionListContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(ClangParser.AssignmentExpressionContext, 0)

        def argumentExpressionList(self):
            return self.getTypedRuleContext(ClangParser.ArgumentExpressionListContext, 0)

        def Comma(self):
            return self.getToken(ClangParser.Comma, 0)

        def getRuleIndex(self):
            return ClangParser.RULE_argumentExpressionList
